tests/should_fail/type_bool_arithmetic.nv
module type_bool_arithmetic
// Should fail: performing arithmetic on bool and int
let x = true + 5
